# jueying-teleop-project

./: .gitignore  README.md
frontend/: frontend_multiplexor.html  frontend_multiplexor_backup.html  jueying_enhanced.html  test-multiplexor.html
multiplexor-server/: package-lock.json  package.json  server.js.old
python_interface/src/: jueying_controller.py
ros_container/: Dockerfile
ros_container/config/: robot_config.yaml
ros_container/scripts/: entrypoint.sh
ros_container/workspace/: test.txt
ros_container/workspace/jueying_simulator/: fake_message_transformer.py  start_simulator.sh
ros_container/workspace/teleop_jueying/: CMakeLists.txt  package.xml
ros_container/workspace/teleop_jueying/src/: teleop_orchestrator.cpp
web_interface/: index.html
