<?xml version="1.0"?>
<package format="2">
  <name>teleop_jueying</name>
  <version>1.0.0</version>
  <description>Teleoperación remota para robot Jueying Lite3</description>
  
  <maintainer email="jhzv.develop@gmail.com">Jhosep Zapata</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  
  <export></export>
</package>
